# unboil

./: .code-workspace
.github/workflows/: publish.python.package.yml  publish.unboil-fastapi-auth.yml  publish.unboil-fastapi-file.yml.tmp  publish.unboil-fastapi-stripe.yml
github/workflows/: publish.python.package.yml
projects/unboil_fastapi_stripe/src/unboil_fastapi_stripe/: __init__.py  routes.py
unboil-celery/: pyproject.toml
unboil-celery/src/unboil/celery/: __init__.py  cached.py  cached_task.py  typed.py  typed_task.py
unboil-fastapi-auth/: pyproject.toml  requirements.in
unboil-fastapi-auth/src/unboil_fastapi_auth/: __init__.py  dependencies.py  models.py  service.py
unboil-fastapi-core/: .env.example  pyproject.toml
unboil-fastapi-core/src/unboil/fastapi/core/: __init__.py  config.py  dependencies.py  events.py  models.py  services.py
unboil-fastapi-core/src/unboil_fastapi_core/: __init__.py  dependencies.py  models.py  settings.py
unboil-fastapi-file/: pyproject.toml
unboil-fastapi-file/src/unboil_fastapi_file/: __init__.py  dependencies.py  events.py  models.py  routes.py  schemas.py  service.py  utils.py
unboil-fastapi-file/src/unboil_fastapi_file/file_providers/: __init__.py  aws.py
unboil-fastapi-stripe/: pyproject.toml
unboil-fastapi-stripe/src/unboil_fastapi_stripe/: __init__.py  config.py  dependencies.py  models.py  routes.py  service.py  settings.py  utils.py
unboil-func-watcher/: pyproject.toml
unboil-func-watcher/src/unboil/: func_watcher.py
unboil-meilisearch-sqlalchemy/: pyproject.toml
unboil-meilisearch-sqlalchemy/src/unboil/meilisearch/sqlalchemy/: __init__.py
unboil-redis/: pyproject.toml
unboil-redis/src/unboil/redis/: __init__.py
unboil-sqlalchemy/: pyproject.toml
unboil-sqlalchemy/src/unboil/sqlalchemy/: __init__.py
unboil-typing/: pyproject.toml
unboil-typing/src/unboil/typing/: __init__.py
unboil-utils-asyncio/: pyproject.toml
unboil-utils-asyncio/src/unboil/utils/asyncio/: __init__.py
unboil-utils-events/: pyproject.toml
unboil-utils-events/src/unboil_utils_events/: __init__.py
unboil-utils-fastapi/: pyproject.toml
unboil-utils-fastapi/src/unboil/utils/fastapi/: __init__.py
unboil-utils-fastapi/src/unboil_utils_fastapi/: __init__.py
unboil-utils-modules/: pyproject.toml
unboil-utils-modules/src/unboil/utils/modules/: __init__.py
unboil-utils-modules/src/unboil_utils_modules/: __init__.py
unboil-utils-redis/: pyproject.toml
unboil-utils-redis/src/unboil/utils/redis/: __init__.py
unboil-utils-sqlalchemy/: pyproject.toml
unboil-utils-sqlalchemy-pydantic/: pyproject.toml
unboil-utils-sqlalchemy-pydantic/src/unboil/utils/sqlalchemy/: pydantic.py
unboil-utils-sqlalchemy-pydantic/src/unboil/utils/sqlalchemy/pydantic/: __init__.py
unboil-utils-sqlalchemy-pydantic/src/unboil_utils_sqlalchemy_pydantic/: __init__.py
unboil-utils-sqlalchemy/src/unboil/utils/sqlalchemy/: models.py
unboil-utils-sqlalchemy/src/unboil_utils_sqlalchemy/: __init__.py
unboil-utils-typing/: pyproject.toml
unboil-utils-typing/src/unboil_utils_typing/: __init__.py
unboil_fastapi_stripe/: pyproject.toml
unboil_fastapi_stripe/src/unboil_fastapi_stripe/: __init__.py
