[project]
name = "unboil-celery"
version = "0.1.11"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eyueldk" }
]
requires-python = ">=3.12"
dependencies = [
    "celery>=5.0.0",
    "unboil-redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/unboil"]

[tool.uv.sources]
unboil-redis = { git = "https://github.com/eyueldk/unboil", subdirectory = "unboil-redis" }
