[project]
name = "unboil-fastapi-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eyueldk", email = "eyueldk@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
