[project]
name = "unboil-fastapi-core"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eyueldk", email = "eyueldk@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.10.0",
    "sqlalchemy>=2.0.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
