[project]
name = "unboil-fastapi-core"
version = "0.1.6"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eyueldk" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "pydantic-settings>=2.10.0",
    "sqlalchemy>=2.0.41",
    "unboil-utils-events",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/unboil"]

[tool.uv.sources]
unboil-utils-events = { git = "https://github.com/EyuelDK/unboil-fastapi", subdirectory = "unboil-utils-events", rev = "972540cba7a3293235d2aa932311052f76270d34" }
