[project]
name = "unboil-fastapi-file"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eyueldk" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "python-multipart",
    "aioboto3>=14.3.0",
    "types-aioboto3[s3]>=14.3.0",
    "sqlalchemy>=2.0.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
