[project]
name = "unboil-fastapi-stripe"
version = "0.1.24"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eyueldk" }
]
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "stripe>=12.0.0",
    "unboil-utils-fastapi",
    "unboil-utils-sqlalchemy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
unboil-utils-fastapi = { git = "https://github.com/EyuelDK/unboil-fastapi.git", subdirectory = "unboil-utils-fastapi", rev = "21bc2938d94a8906b7de97c51af2407c11493711" }
unboil-utils-sqlalchemy = { git = "https://github.com/EyuelDK/unboil-fastapi.git", subdirectory = "unboil-utils-sqlalchemy", rev = "21bc2938d94a8906b7de97c51af2407c11493711" }
