[project]
name = "unboil-fastapi-stripe"
version = "0.1.30"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eyueldk" }
]
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "stripe>=12.0.0",
    "unboil-utils-fastapi @ git+https://github.com/EyuelDK/unboil-fastapi.git@612436b6a011ea37bf95495d48ca2cbdaf63c5f6#subdirectory=unboil-utils-fastapi",
    "unboil-utils-sqlalchemy @ git+https://github.com/EyuelDK/unboil-fastapi.git@612436b6a011ea37bf95495d48ca2cbdaf63c5f6#subdirectory=unboil-utils-sqlalchemy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"