[project]
name = "unboil-fastapi-stripe"
version = "0.1.31"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eyueldk" }
]
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "stripe>=12.0.0",
    "unboil-utils-fastapi @ git+https://github.com/EyuelDK/unboil-fastapi.git@8810d9f58f8186442c45ddd4f054d2dfbc147d30#subdirectory=unboil-utils-fastapi",
    "unboil-utils-sqlalchemy @ git+https://github.com/EyuelDK/unboil-fastapi.git@8810d9f58f8186442c45ddd4f054d2dfbc147d30#subdirectory=unboil-utils-sqlalchemy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"