[project]
name = "unboil-func-watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eyueldk" }
]
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.0.0",
    "redis>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/unboil"]