[project]
name = "unboil-redis"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eyueldk" }
]
requires-python = ">=3.12"
dependencies = [
    "redis[hiredis]>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/unboil"]