[project]
name = "unboil-utils-asyncio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eyueldk", email = "eyueldk@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
