[project]
name = "unboil-utils-fastapi"
version = "0.1.6"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eyueldk" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.60.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
