[project]
name = "unboil-utils-fastapi"
version = "0.1.7"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eyueldk" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.60.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/unboil"]