[project]
name = "unboil-utils-modules"
version = "0.1.15"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eyueldk"}
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/unboil"]